--- a/app/src/main/res/layout/fragment_tests.xml
+++ b/app/src/main/res/layout/fragment_tests.xml
@@ -6,12 +6,6 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TESTS FRAGMENT" />
-
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -31,5 +25,11 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_input_add" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Start test" />
 
 </android.support.design.widget.CoordinatorLayout>
