--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -156,6 +156,14 @@
         <item name="android:background">@drawable/button_primary_bg</item>
     </style>
 
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:dashWidth">1dp</item>
+        <item name="android:dashGap">1dp</item>
+    </style>
+
 
 
 
