--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -20,7 +20,13 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-
+    <com.maxot.mytest.ui.custom.RoundedImageView
+        android:id="@+id/iv_profile_pic"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="40dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/question_mark" />
 
     <TextView
         android:id="@+id/tv_name"
