--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -16,6 +16,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group>
         <item
+            android:id="@+id/nav_item_profile"
+            android:checked="true"
+            android:icon="@drawable/ic_account_circle_black_24dp"
+            android:title="@string/profile" />
+
+        <item
             android:id="@+id/nav_item_about"
             android:checked="true"
             android:icon="@drawable/ic_info_24px"
