--- a/app/src/main/res/layout/activity_testing.xml
+++ b/app/src/main/res/layout/activity_testing.xml
@@ -30,11 +30,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_gravity="bottom"
         android:background="@color/colorPrimary">
-
-
 
             <TextView
                 android:id="@+id/questionNum"
@@ -53,7 +51,7 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="10"
+                android:layout_weight="9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"/>
