--- a/app/src/main/res/layout/item_results_view.xml
+++ b/app/src/main/res/layout/item_results_view.xml
@@ -19,16 +19,49 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="30dp">
+            android:orientation="horizontal"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:id="@+id/test_name_in_results_view"
                 style="@style/TextStyle.Title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_weight="8"
+                android:textStyle="normal" />
+            <ImageView
+                android:id="@+id/true_imageview"
+                android:layout_margin="5dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_true_green_24dp" />
+            <TextView
+                android:id="@+id/count_true"
+                android:text="5"
+                style="@style/TextStyle.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:textStyle="normal" />
+            <ImageView
+                android:id="@+id/false_imageview"
+                android:layout_margin="5dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_false_red_24dp" />
+            <TextView
+                android:id="@+id/count_false"
+                android:text="2"
+                style="@style/TextStyle.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
                 android:textStyle="normal" />
 
         </LinearLayout>
