Add search activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/cl_root_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@drawable/my_background_image"
         android:clipChildren="false">
 
         <LinearLayout
