--- a/app/src/main/res/layout/fragment_tests.xml
+++ b/app/src/main/res/layout/fragment_tests.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@drawable/my_background"
+    android:background="@color/transparent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -28,6 +28,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@drawable/ic_add_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
