--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -6,11 +6,13 @@
     <item
         android:id="@+id/edit_about"
         android:checked="true"
-        android:title="@string/edit_about" />
+        android:title="@string/edit_about" >
+    </item>
 
     <item
         android:id="@+id/add_review"
         android:checked="true"
         android:title="@string/add_review" />
+    
 
 </menu>
