--- a/app/src/main/res/drawable/bg_design.xml
+++ b/app/src/main/res/drawable/bg_design.xml
@@ -16,7 +16,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/cyan_light" />
+            <solid android:color="@color/blue_grey_light" />
         </shape>
     </item>
     <item android:bottom="300dp">
@@ -26,7 +26,7 @@
             android:pivotY="0%"
             android:toDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="@color/navy_blue_dark" />
+                <solid android:color="@color/colorAccent" />
             </shape>
         </rotate>
     </item>
@@ -70,7 +70,7 @@
             android:pivotY="0%"
             android:toDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="@color/cyan" />
+                <solid android:color="@color/yellow" />
             </shape>
         </rotate>
     </item>
@@ -81,7 +81,7 @@
             android:pivotY="0%"
             android:toDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="@color/red_dark2" />
+                <solid android:color="@color/blue_grey_light" />
             </shape>
         </rotate>
     </item>
@@ -92,7 +92,7 @@
             android:pivotY="0%"
             android:toDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="@color/red_dark" />
+                <solid android:color="@color/light_green" />
             </shape>
         </rotate>
     </item>
