--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,6 +47,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:background="@drawable/input_border_bottom"
                     android:cursorVisible="true"
                     android:gravity="center|left|bottom"
                     android:hint="@string/email"
@@ -74,6 +75,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="30dp"
+                    android:background="@drawable/input_border_bottom"
                     android:cursorVisible="true"
                     android:gravity="center|left|bottom"
                     android:inputType="textPassword"
