--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/my_background_image"
     android:animateLayoutChanges="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -32,7 +33,7 @@
                         android:layout_marginRight="20dp"
                         android:textColor="@color/white"
                         android:textColorHighlight="@color/white"
-                        android:textColorHint="@color/white"
+                        android:textColorHint="@color/white_hint"
                         android:textSize="18dp"
                         android:layout_weight="7"
                         android:hint="@string/search"/>
