--- a/app/src/main/res/layout/heading_view.xml
+++ b/app/src/main/res/layout/heading_view.xml
@@ -10,7 +10,7 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     android:gravity="center"
-    android:background="@color/colorPrimary">
+    android:background="@color/transparent50">
     <TextView
         android:id="@+id/headingTxt"
         android:layout_width="wrap_content"
