Add signIn with google

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cl_root_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/my_background_image"
+        android:background="@drawable/bg_design"
         android:clipChildren="false">
 
         <LinearLayout
