--- a/app/src/main/res/layout/item_profile_result.xml
+++ b/app/src/main/res/layout/item_profile_result.xml
@@ -7,13 +7,16 @@
     android:paddingLeft="10dp"
     android:paddingRight="20dp"
     android:paddingTop="10dp"
-    android:paddingBottom="20dp"
+
     android:gravity="left"
     android:background="@color/blue_grey_light">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="69dp"
-        android:layout_margin="10dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="0dp"
         android:padding="15dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
